improve folder structure

--- a/examples/monte_carlo_analysis.ipynb
+++ b/examples/monte_carlo_analysis.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b9d71933",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from monte_carlo import MonteCarloPricer\n",
+    "from src import MonteCarloPricer\n",
     "\n",
     "plt.style.use('seaborn-v0_8-whitegrid')"
    ]
